name:                importschema
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/importschema#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2010 Author Here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable importschema
  hs-source-dirs:      src
  main-is:             ImportSchema.hs
  default-language:    Haskell2010
  other-modules:       LappDriver, Mapping
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-odbc
                     , time
                     , directory
                     , split
                     , bytestring