name:                importschema
version:             0.1.0.1
synopsis:            Generates very simple ODBC wrapper functions for ODBC tables.
description:         Please see README.md
homepage:            http://github.com/timmyw/importschema#readme
license:             GPL-3
license-file:        LICENSE
author:              Tim Whelan
maintainer:          tim@zipt.co
copyright:           2015 Tim Whelan
category:            Data
build-type:          Simple
cabal-version:       >=1.10

executable importschema
  hs-source-dirs:      src
  main-is:             ImportSchema.hs
  default-language:    Haskell2010
  other-modules:       LappDriver, Mapping, Paths_importschema
  build-depends:       base >= 4.7 && < 5
                     , HDBC
                     , HDBC-odbc
                     , time
                     , directory
                     , split
                     , bytestring

executable odbctest
  hs-source-dirs:      src
  main-is:             ODBCTest.hs
  default-language:    Haskell2010
  other-modules:
  build-depends:       base >= 4.7
                     , HDBC
                     , HDBC-odbc
                     